Add colorpicker functionality

--- a/app/templates/chartForm.html
+++ b/app/templates/chartForm.html
@@ -139,8 +139,14 @@ Pears,Winter,149,2.10</textarea>
     <a href="#" style="display: none;" class="download-svg">Download SVG</a>
     <a href="#" style="display: none;" class="download-png">Download PNG</a>
     <canvas id="canvas" width="1000px" height="600px" style="display: none;"></canvas>
-  </div>
+  </div><!-- #download-image-link -->
 
-  <div id="color-picker"></div>
+  <div id="color-picker">
+    <a href="#" class="prep">Access color picker</a>
+    <div class="picker" style="display: none;">
+      <label for="color1">Color 1</label>
+      <input id="color1" name="color1" type="text" value="#ffb900" />
+    </div><!-- .picker -->
+  </div><!-- #color-picker -->
 
 </section>
