more fixes, ready to trim

--- a/app/templates/chartForm.html
+++ b/app/templates/chartForm.html
@@ -18,6 +18,10 @@
 
 
     <section class="container">
+
+        <textarea id="the-url-params" rows="1" cols="50"></textarea>
+        <div id="the-url-w-params"></div>
+
         <div class="row">
             <div class="col-sm-6">
                 <h5>Canonical JSON here</h5>
